--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "pod": "npx pod-install ios"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.4",
     "react": "^18.0.0",
     "react-native": "0.69.3",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-redux": "^8.0.2"
