--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.4",
+    "date-fns": "^2.29.1",
+    "json-server": "^0.17.0",
     "react": "^18.0.0",
+    "react-devtools": "^4.25.0",
     "react-native": "0.69.3",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.9.1",
