--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pod": "npx pod-install ios"
   },
   "dependencies": {
+    "@notifee/react-native": "^5.6.0",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
